# AtomDB

./: .buildinfo  .editorconfig  .gitignore  .pre-commit-config.yaml  CNAME  MANIFEST.in  README.md  README.rst  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: pypi_release.yaml  pytest.yaml  website.yaml
_autosummary/: atomdb.datasets.gaussian.html  atomdb.datasets.hci.html  atomdb.datasets.hci_augccpwcvqz.html  atomdb.datasets.html  atomdb.datasets.nist.html  atomdb.datasets.numeric.html  atomdb.datasets.slater.html  atomdb.datasets.uhf_augccpvdz.html  atomdb.html  modules.html
_sources/: index.rst
_sources/_autosummary/: atomdb.datasets.gaussian.rst  atomdb.datasets.hci.rst  atomdb.datasets.hci_augccpwcvqz.rst  atomdb.datasets.nist.rst  atomdb.datasets.numeric.rst  atomdb.datasets.rst  atomdb.datasets.slater.rst  atomdb.datasets.uhf_augccpvdz.rst  atomdb.rst
_sources/examples/: promolecule_nci.ipynb
_sources/pyapi/: atomdb.api.rst  atomdb.periodic.rst  atomdb.promolecule.rst  atomdb.rst  atomdb.units.rst  atomdb.version.rst  modules.rst
api/: index.html
api/notebooks/: getting_started.html  hello_atomdb.html  promolecule_intro.html  promolecule_nci.html
atomdb/: __init__.py  __main__.py  api.py  base.py  build.py  config.py  dbentry.py  msg.py  periodic.py  promolecule.py  species.py  units.py  utils.py  version.py
atomdb/data/: c6cp04533b1.csv  data_info.csv  elements_data.csv  elements_data.h5  multiplicities_table.csv  slater_atom.tar.xz  slater_atom_info.txt  utils.py
atomdb/datasets/: __init__.py  tools.py
atomdb/datasets/gaussian/: __init__.py  run.py
atomdb/datasets/hci/: __init__.py  run.py
atomdb/datasets/hci_augccpwcvqz/: __init__.py  run.py
atomdb/datasets/hci_ccpwcvqz/: basis.txt  compile.py  generate.py
atomdb/datasets/nist/: __init__.py  run.py
atomdb/datasets/numeric/: __init__.py  run.py
atomdb/datasets/slater/: __init__.py  run.py
atomdb/datasets/uhf_augccpvdz/: run.py  (+1 more)
atomdb/io/: __init__.py  numeric.py  periodic.py  spectra.py  wfn_slater.py
atomdb/test/: test_api.py  test_base.py  test_gaussian.py  test_gaussian_dev.py  test_hci.py  test_nist.py  test_numeric.py  test_periodic.py  test_promolecule.py  test_utils.py  test_wfn_slater.py  test_wfn_slater_dev.py
doc/notebooks/: Getting_Started.ipynb  Promolecule_Tools.ipynb  getting_started.ipynb  hello_atomdb.ipynb
docs/: CNAME
docs/notebooks/: Getting_Started.ipynb  Promolecule_NCI.ipynb  Promolecule_Tools.ipynb  getting_started.ipynb  hello_atomdb.ipynb  manuscript_examples_atomdb.ipynb  promolecule_intro.ipynb
docs/notes/: promolecule.md
docs/source/: atomdb_cite.bib  conf.py  datasets.rst  index.rst  installation.rst  intro.rst  structure.rst  user.rst
examples/: getting_started.html  hello_atomdb.html  promolecule_intro.html  promolecule_nci.html
examples/notebooks/: Getting_Started.ipynb  Promolecule_NCI.ipynb  Promolecule_Tools.ipynb  hello_atomdb.ipynb
pyapi/: atomdb.api.html  atomdb.html  atomdb.periodic.html  atomdb.promolecule.html  atomdb.units.html  atomdb.version.html  modules.html
website/: _config.yml  _toc.yml  index.rst  installation.rst  requirements.txt
website/api/: atomdb_cite.bib  conf.py  table_datasets.csv
website/examples/: getting_started.ipynb  hello_atomdb.ipynb  promolecule_intro.ipynb  promolecule_nci.ipynb
(+1546 files in other folders)
