# This file is part of AtomDB.
#
# AtomDB is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your
# option) any later version.
#
# AtomDB is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
# for more details.
#
# You should have received a copy of the GNU General Public License
# along with AtomDB. If not, see <http://www.gnu.org/licenses/>.

[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AtomDB"
authors = [
  { name="QC-Devs Community", email="qcdevs@gmail.com" },
]
description = "AtomDB is a database of atomic and ionic properties."
readme = "README.rst"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
classifiers = [
   'Development Status :: 0 - Released',
    'Environment :: Console',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Operating System :: POSIX :: Linux',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Intended Audience :: Science/Research',
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.16",
    "scipy>=1.4",
    "msgpack>=1.0.0",
    "msgpack-numpy>=0.4.8",
    "h5py>=3.6.0",
    "importlib_resources>=3.0.0",
    "pooch==1.8.1",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://atomdb.qcdevs.org"
Issues = "https://github.com/theochem/atomdb/issues"
Source = "https://github.com/theochem/atomdb/"
Changelog = "https://github.com/theochem/atomdb/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest >=2.6",
    "pyscf",
    "qc-gbasis@git+https://github.com/theochem/gbasis.git@master",
    "qc-grid@git+https://github.com/theochem/grid.git@master",
    "qc-iodata@git+https://github.com/theochem/iodata.git@main",
]
test_extra = [
    "pytest-md",
    "pytest-emoji",
    "pytest-cov",
]
doc = [
    "ipython",
    "numpydoc",
    "sphinx_copybutton",
    "sphinx-autoapi",
    "nbsphinx",
    "nbconvert",
    "sphinx_rtd_theme",
    "sphinxcontrib-bibtex",
    "sphinx_autodoc_typehints",
    "docutils==0.16",  # Needed to show bullet points in sphinx_rtd_theme
    "nbsphinx-link",
]

[tool.setuptools]
packages = ["atomdb"]

[tool.black]
line-length = 100

[tool.ruff]
# E is pycodestyle
# F is pyflakes
# UP is pyupgrade - automatically updates syntax
# B is flake8-bugbear
# I is sort imports alphabetically
# PGH is pygrep-hooks
# PL is pylint
# RUF is Ruff-specific rules
select = ["E", "F", "UP", "B", "I", "PGH", "PL", "RUF"]
line-length = 100
ignore = ["PLR2004", "PLR0913", "PLR0912", "PLW2901", "PLR0915", "RUF013"]
extend-exclude = ["doc/*", "doc/*/*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["test"]
addopts = "-m 'not dev'"
markers = [
    "dev: mark a developer test, needs extra dependencies.",
]


